# source-sdk-2020

./: .gitignore  CMakeLists.txt
docs/research/: clientdllexports.txt  engine.txt  gameui.txt  localize.txt  serverdllexports.txt  vgui2.txt
game/scratch/: gameinfo.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/client/: CMakeLists.txt  EffectsClient.cpp  baseclientrendertargets.h  cdll_client_int.cpp  cliententitylist.h  clientleafsystem.cpp  prediction.h
src/game/server/: CMakeLists.txt  EffectsServer.cpp  ServerGameDLL.cpp  ServerGameDLL.hpp  entity_tools_server.cpp  gameinterface.cpp  gameinterface.h  hltvdirector.h  playerinfomanager.cpp  playerinfomanager.h  plugin_check.cpp  util.h  vote_controller.h
src/game/shared/: CMakeLists.txt  interval.cpp
src/game/shared/hl2/: CMakeLists.txt
src/game/shared/sdk/: CMakeLists.txt
src/game/shared/swarm/: CMakeLists.txt
src/gameui/: CMakeLists.txt
src/gameui/sdk/: CMakeLists.txt
src/mathlib/: CMakeLists.txt
src/public/: CMakeLists.txt  cdll_int.h  filesystem.h  ixboxsystem.h
src/public/SoundEmitterSystem/: isoundemittersystembase.h
src/public/avi/: ibik.h
src/public/engine/: IStaticPropMgr.h
src/public/localize/: ilocalize.h
src/public/steam/: isteamclient.h  steam_api.h
src/public/vgui/: IBorder.h  IInput.h  IPanel.h  IScheme.h  ISystem.h
src/public/vgui_controls/: Panel.h
src/responserules/runtime/: response_system.cpp
src/tier1/: CMakeLists.txt
src/vgui2/: CMakeLists.txt
src/vgui2/vgui_controls/: CMakeLists.txt
